# sgis

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  env  environment.yml  pyproject.toml
doc/: conf.py  index.rst
doc/_build/doctrees/: environment.pickle  index.doctree
doc/_build/doctrees/source/: modules.doctree  sgis.classifier.doctree  sgis.doctree  sgis.splitter.doctree  sgis.vector_tools.doctree
doc/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/_build/html/_sources/source/: sgis.classifier.rst  sgis.vector_tools.rst
doc/_build/html/source/: modules.html  sgis.classifier.html  sgis.html  sgis.splitter.html  sgis.vector_tools.html
doc/source/: modules.rst  sgis.rst  sgis.splitter.rst
src/sgis/: __init__.py  _init_qgis.py  _utils.py
src/sgis/classifier/: __init__.py  _classifier.py  _custom_data_loader.py
src/sgis/splitter/: __init__.py  _splitter.py
src/sgis/vector_tools/: __init__.py  _external_data.py  _preprocessing.py  _utils.py
